@@ -1,3 +1,9 @@
+2002-08-02  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
+
+	* generic/tkPanedWindow.c (DestroyPanedWindow): Idle calls need to
+	be deleted on destruction of the window, or things can *really* go
+	pear-shaped.
+
 2002-07-31  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
 	* generic/tkPanedWindow.c (PanedWindowReqProc): Postpone pane
